--- a/app/templates/new-comment.html
+++ b/app/templates/new-comment.html
@@ -4,10 +4,10 @@
 <div class="content-section mt-4 pt-2">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
+            <fieldset class="form-group purple-border"">
                 <legend class="border-bottom mb-4">{{ legend }}</legend>
             
-                <div class="form-group">
+                <div class="form-group purple-border">
                     {{ form.name.label(class="form-control-label") }}
                     {% if form.name.errors %}
                         {{ form.name(class="form-control form-control-lg is-invalid") }}
@@ -21,7 +21,7 @@
                     {% endif %}
                 </div>
 
-                <div class="form-group">
+                <div class="form-group purple-border"">
                     {{ form.comment.label(class="form-control-label") }}
                     {% if form.comment.errors %}
                         {{ form.comment(class="form-control form-control-lg is-invalid") }}
@@ -35,7 +35,7 @@
                     {% endif %}
                 </div>
             </fieldset>
-            <div class="form-group">
+            <div class="form-group purple-border"">
                 {{ form.submit(class="btn btn-outline-success") }}
             </div>
         </form>
