--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- <header class="site-header"> -->
-  <nav class="navbar navbar-expand-lg navbar-dark success-color-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark success-color-dark secondary-color lighten-1 fixed-top">
     <div class="container">
     <a class="navbar-brand mr-4" href="/">BLOGSPHERE</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
