--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% block content%} 
 
   <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold text-center my-2">Recent posts</h2>
+  <h2 class="h1-responsive font-weight-bold text-center my-2" style="margin-top: 2%;">Recent posts</h2>
   <!-- Grid row -->
     {% for post in posts.items %}
 
