--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,7 +7,7 @@
             {{ form.hidden_tag() }}
 
             <fieldset>
-                <legend class="border-bottom mb-4"> Join Blogsphere! </legend>
+                <legend class="border-bottom mb-4" style="margin-top: 2%;"> Join Blogsphere! </legend>
 
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
